--- a/pacman.conf
+++ b/pacman.conf
@@ -75,9 +75,9 @@ RemoteFileSigLevel = Required
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-[testing]
-Usage=Search Sync
-Include = /etc/pacman.d/mirrorlist
+#[testing]
+#Usage=Search Sync
+#Include = /etc/pacman.d/mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
@@ -85,9 +85,9 @@ Include = /etc/pacman.d/mirrorlist
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
-[community-testing]
-Usage=Search Sync
-Include = /etc/pacman.d/mirrorlist
+#[community-testing]
+#Usage=Search Sync
+#Include = /etc/pacman.d/mirrorlist
 
 [community]
 Include = /etc/pacman.d/mirrorlist
@@ -95,9 +95,9 @@ Include = /etc/pacman.d/mirrorlist
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
-[multilib-testing]
-Usage=Search Sync
-Include = /etc/pacman.d/mirrorlist
+#[multilib-testing]
+#Usage=Search Sync
+#Include = /etc/pacman.d/mirrorlist
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
