--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,96 @@
 fail_fast: true
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.2.0
-  hooks:
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
-  - id: check-json
-  - id: check-yaml
-  - id: sort-simple-yaml
-  - id: check-xml
-  - id: check-merge-conflict
-  - id: check-ast
-  - id: check-shebang-scripts-are-executable
-    exclude: '^.*\.j2$|^makepkg.conf$'
-  - id: check-toml
-  - id: destroyed-symlinks
-  - id: detect-private-key
-  - id: fix-encoding-pragma
-  - id: no-commit-to-branch
-    args: [--branch, master]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.2.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: fix-byte-order-marker
+      - id: check-merge-conflict
+      - id: check-builtin-literals
+      - id: check-case-conflict
+      - id: check-json
+      - id: check-yaml
+      - id: sort-simple-yaml
+      - id: check-xml
+      - id: check-ast
+      - id: check-executables-have-shebangs
+        exclude: '^.*\.j2$|^makepkg.conf$'
+      - id: check-shebang-scripts-are-executable
+        exclude: '^.*\.j2$'
+      - id: check-toml
+      - id: check-added-large-files
+      - id: check-symlinks
+      - id: destroyed-symlinks
+      - id: detect-private-key
+      - id: fix-encoding-pragma
+        args: [--remove]
+      - id: no-commit-to-branch
+        args: [--branch, master]
+      - id: requirements-txt-fixer
+  - repo: https://github.com/pre-commit-ci/pre-commit-ci-config
+    rev: v1.5.1
+    hooks:
+      - id: check-pre-commit-ci-config
+  - repo: https://github.com/pre-commit/pre-commit
+    rev: v2.18.1
+    hooks:
+      - id: validate_manifest
+  - repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.0.1
+    hooks:
+      - id: reorder-python-imports
+        args: [--py39-plus]
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.2.2
+    hooks:
+      - id: add-trailing-comma
+        args: [--py36-plus]
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.32.0
+    hooks:
+      - id: pyupgrade
+        args: [--py39-plus]
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.9.0
+    hooks:
+      - id: python-check-blanket-noqa
+      - id: python-check-blanket-type-ignore
+      - id: python-check-mock-methods
+      - id: python-no-eval
+      - id: python-no-log-warn
+      - id: python-use-type-annotations
+      - id: text-unicode-replacement-char
+  - repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v1.20.1
+    hooks:
+      - id: setup-cfg-fmt
+  - repo: https://github.com/sirosen/check-jsonschema
+    rev: 0.14.2
+    hooks:
+      - id: check-github-workflows
+      - id: check-github-actions
+      - id: check-azure-pipelines
+      - id: check-readthedocs
+      - id: check-travis
+  - repo: https://github.com/AleksaC/hadolint-py
+    rev: v2.10.0
+    hooks:
+      - id: hadolint
+        args:
+          - '--ignore'
+          - 'DL3059'
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.8.0.4
+    hooks:
+      - id: shellcheck
+        args:
+          - "--exclude=1071,1090,1091,2001"
+  - repo: https://github.com/asottile/yesqa
+    rev: v1.3.0
+    hooks:
+      - id: yesqa
 ci:
   autofix_prs: false
-  autoupdate_commit_msg: 'pre-commit: bump repositories'
+  autoupdate_commit_msg: 'chore(pre-commit): bump repositories'
