chore(pre-commit): ignore SC3037
Signed-off-by: Luís Ferreira <contact@lsferreira.net>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,6 +81,8 @@ repos:
         args:
           - '--ignore'
           - 'DL3059'
+          - '--ignore'
+          - 'SC3037'
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.8.0.4
     hooks:
