chore(pre-commit): add reference to SC3037 issue
Reference: https://github.com/koalaman/shellcheck/issues/2321
Signed-off-by: Luís Ferreira <contact@lsferreira.net>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,6 +81,7 @@ repos:
         args:
           - '--ignore'
           - 'DL3059'
+          # FIXME: https://github.com/koalaman/shellcheck/issues/2321
           - '--ignore'
           - 'SC3037'
   - repo: https://github.com/shellcheck-py/shellcheck-py
