--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,19 +1,25 @@
+---
 name: checks
 
 on:
   pull_request:
-    branches:
-      - master
+    branches: [master]
   push:
-    branches:
-      - master
+    branches: [master]
   workflow_dispatch:
 
 jobs:
   before-commit:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
+    env:
+      SKIP: no-commit-to-branch
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
-      - uses: before-commit/run-action@v2.0.3
+      - uses: before-commit/run-action@v2
