ci(github): use docker buildx
Signed-off-by: Luís Ferreira <contact@lsferreira.net>

--- a/.github/workflows/cron-checks.yml
+++ b/.github/workflows/cron-checks.yml
@@ -10,6 +10,9 @@ on:
     - cron:  '0 0 * * *'
   workflow_dispatch:
 
+env:
+  DOCKER_BUILDKIT: '1'
+
 jobs:
   codacy-security-scan:
     runs-on: ubuntu-latest
@@ -44,6 +47,16 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v3
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2.1.0
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v2.5.0
+      with:
+        version: 'latest'
+        driver-opts: |
+          network=host
+          image=moby/buildkit:latest
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag localbuild/testimage:latest
     - name: Run the Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
