--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,9 @@ on:
     - cron:  '0 0 * * *'
   workflow_dispatch:
 
+env:
+  DOCKER_BUILDKIT: '1'
+
 jobs:
   build_push:
     runs-on: ubuntu-latest
@@ -20,16 +23,25 @@ jobs:
         uses: actions/checkout@v3
       - if: github.event_name != 'pull_request'
         name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v2.1.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2.1.0
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        id: buildx
+        uses: docker/setup-buildx-action@v2.5.0
+        with:
+          version: 'latest'
+          driver-opts: |
+            network=host
+            image=moby/buildkit:latest
       - if: github.event_name != 'pull_request'
         name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v4.0.0
         with:
+          builder: ${{ steps.buildx.outputs.name }}
           context: .
           no-cache: true
           pull: true
@@ -37,8 +49,9 @@ jobs:
           tags: ljmf00/archlinux:latest
       - if: github.event_name == 'pull_request'
         name: Test build
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v4.0.0
         with:
+          builder: ${{ steps.buildx.outputs.name }}
           context: .
           no-cache: true
           pull: true
