--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,10 @@ env:
 jobs:
   build_push:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: [amd64]
+        target: [base, lite, devel, aur]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -34,26 +38,55 @@ jobs:
         uses: docker/setup-buildx-action@v2.5.0
         with:
           version: 'latest'
+          buildkitd-flags: --debug
           driver-opts: |
             network=host
             image=moby/buildkit:latest
-      - if: github.event_name != 'pull_request'
-        name: Build and push
+
+      - if: github.event_name != 'pull_request' && matrix.target == 'base'
+        name: Test build (${{ matrix.target }})
         uses: docker/build-push-action@v4.0.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/${{ matrix.arch }}
+          build-args: arch=${{ matrix.arch }}
           context: .
           no-cache: true
           pull: true
           push: true
-          tags: ljmf00/archlinux:latest
-      - if: github.event_name == 'pull_request'
-        name: Test build
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ljmf00/archlinux:${{ matrix.target }},ljmf00/archlinux:latest
+          target: ${{ matrix.target }}-squash
+
+      - if: github.event_name != 'pull_request' && matrix.target != 'base'
+        name: Test build (${{ matrix.target }})
         uses: docker/build-push-action@v4.0.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/${{ matrix.arch }}
+          build-args: arch=${{ matrix.arch }}
+          context: .
+          no-cache: true
+          pull: true
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ljmf00/archlinux:${{ matrix.target }}
+          target: ${{ matrix.target }}-squash
+
+      - if: github.event_name == 'pull_request'
+        name: Test build (${{ matrix.target }})
+        uses: docker/build-push-action@v4.0.0
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/${{ matrix.arch }}
+          build-args: arch=${{ matrix.arch }}
           context: .
           no-cache: true
           pull: true
           push: false
-          tags: ljmf00/archlinux:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ljmf00/archlinux:${{ matrix.target }}
+          target: ${{ matrix.target }}-squash
