--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [amd64, aarch64]
+        arch: [amd64, aarch64, armhf]
         target: [base, lite, devel, aur]
     steps:
       - name: Checkout
