--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,8 +42,23 @@ jobs:
             network=host
             image=moby/buildkit:latest
 
-      - if: github.event_name != 'pull_request'
-        name: Test build (${{ matrix.target }})
+      - if: github.event_name != 'pull_request' && matrix.target == 'base'
+        name: Build and push (base)
+        uses: docker/build-push-action@v4.0.0
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/arm64,linux/arm/v7,linux/amd64
+          context: .
+          no-cache: true
+          pull: true
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ljmf00/archlinux:${{ matrix.target }},ljmf00/archlinux:latest
+          target: ${{ matrix.target }}-squash
+
+      - if: github.event_name != 'pull_request' && matrix.target != 'base'
+        name: Build and push
         uses: docker/build-push-action@v4.0.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
@@ -58,7 +73,7 @@ jobs:
           target: ${{ matrix.target }}-squash
 
       - if: github.event_name == 'pull_request'
-        name: Test build (${{ matrix.target }})
+        name: Test build
         uses: docker/build-push-action@v4.0.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
@@ -71,3 +86,14 @@ jobs:
           cache-to: type=gha,mode=max
           tags: ljmf00/archlinux:${{ matrix.target }}
           target: ${{ matrix.target }}-squash
+
+      - name: Anchore scan
+        uses: anchore/scan-action@v3.3.5
+        with:
+          image: ljmf00/archlinux:${{ matrix.target }}
+          acs-report-enable: true
+
+      - name: Upload Anchore Scan Report
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: results.sarif
