--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/build-push-action@v4.0.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/arm64,linux/arm/v7,linux/amd64
+          platforms: linux/arm64,linux/arm/v7,linux/amd64,linux/386
           context: .
           no-cache: true
           pull: true
@@ -62,7 +62,7 @@ jobs:
         uses: docker/build-push-action@v4.0.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/arm64,linux/arm/v7,linux/amd64
+          platforms: linux/arm64,linux/arm/v7,linux/amd64,linux/386
           context: .
           no-cache: true
           pull: true
@@ -77,7 +77,7 @@ jobs:
         uses: docker/build-push-action@v4.0.0
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/arm64,linux/arm/v7,linux/amd64
+          platforms: linux/arm64,linux/arm/v7,linux/amd64,linux/386
           context: .
           no-cache: true
           pull: true
