chore(docker): add NoExtract rule to pacman.conf
Signed-off-by: Luís Ferreira <contact@lsferreira.net>

--- a/amd64/pacman.conf
+++ b/amd64/pacman.conf
@@ -26,13 +26,29 @@ Architecture = x86_64
 #IgnoreGroup =
 
 #NoUpgrade   =
+
 NoExtract = usr/share/man/*
-NoExtract = usr/share/locale/*
+NoExtract = usr/share/info/*
 NoExtract = usr/share/doc/*
 NoExtract = usr/share/gtk-doc/*
+
+NoExtract = usr/share/vim/vim*/lang/*
+NoExtract = usr/share/X11/locale/*
+NoExtract = usr/share/i18n/*
+NoExtract = usr/share/locale/*
 NoExtract = !usr/share/locale/locale.alias
 NoExtract = !usr/share/locale/en/*
 NoExtract = !usr/share/locale/en_US/*
+NoExtract = !*locale*/en*/*
+NoExtract = !usr/share/i18n/charmaps/UTF-8.gz
+NoExtract = !usr/share/*locale*/locale.*
+NoExtract = !usr/share/*locale*/en_??
+NoExtract = !usr/share/*locale*/i18n*
+NoExtract = !usr/share/*locale*/iso*
+NoExtract = !usr/share/*locale*/trans*
+
+NoExtract = usr/share/help/*
+NoExtract = !usr/share/help/en*
 
 # Misc options
 #UseSyslog
@@ -71,39 +87,14 @@ RemoteFileSigLevel = Required
 # uncommented to enable the repo.
 #
 
-# The testing repositories are disabled by default. To enable, uncomment the
-# repo name header and Include lines. You can add preferred servers immediately
-# after the header, and they will be used before the default mirrors.
-
-#[testing]
-#Usage=Search Sync
-#Include = /etc/pacman.d/mirrorlist
-
 [core]
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
-#[community-testing]
-#Usage=Search Sync
-#Include = /etc/pacman.d/mirrorlist
-
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-# If you want to run 32 bit applications on your x86_64 system,
-# enable the multilib repositories as required here.
-
-#[multilib-testing]
-#Usage=Search Sync
-#Include = /etc/pacman.d/mirrorlist
-
 [multilib]
 Include = /etc/pacman.d/mirrorlist
-
-# An example of a custom package repository.  See the pacman manpage for
-# tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs
